force-app/main/default/objects/OrderItem/fields/Order_Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Order_Primary_Contact_Email__c</fullName>
    <formula>Order.BillToContact.Email</formula>
    <label>Order Primary Contact Email</label>
    <type>Text</type>
</CustomField>