force-app/main/default/objects/OrderItem/fields/Order_Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Primary_Contact_Name__c</fullName>
    <formula>Order.BillToContact.FullName__c</formula>
    <label>Order Primary Contact Name</label>
    <type>Text</type>
</CustomField>