force-app/main/default/objects/OrderItem/fields/Order_Product_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Created_Date__c</fullName>
    <formula>CreatedDate</formula>
    <label>Order Product Created Date</label>
    <type>DateTime</type>
</CustomField>