force-app/main/default/objects/OrderItem/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>Captures other details related to the product.</description>
    <inlineHelpText>Indicates other details related to the product.</inlineHelpText>
    <label>Other</label>
    <type>TextArea</type>
</CustomField>