force-app/main/default/objects/OrderItem/fields/Outstanding_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outstanding Invoice</label>
    <type>Checkbox</type>
</CustomField>