force-app/main/default/objects/OrderItem/fields/Parking_Details__c.field-meta.xml
<CustomField>
    <fullName>Parking_Details__c</fullName>
    <description>Captures the parking information for trainers, when onsite.</description>
    <inlineHelpText>Indicates the parking information for trainers, when onsite.</inlineHelpText>
    <label>Parking Details</label>
    <type>TextArea</type>
</CustomField>