force-app/main/default/objects/OrderItem/fields/Personal_Protective_Equipment_PPE__c.field-meta.xml
<CustomField>
    <fullName>Personal_Protective_Equipment_PPE__c</fullName>
    <description>Captures the personal protective equipment required for a course.</description>
    <inlineHelpText>Captures the personal protective equipment required for a course.</inlineHelpText>
    <label>Personal Protective Equipment (PPE)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Safety boots</fullName>
            </value>
            <value>
                <fullName>Safety glasses</fullName>
            </value>
            <value>
                <fullName>Hardhat</fullName>
            </value>
            <value>
                <fullName>Hearing protection</fullName>
            </value>
            <value>
                <fullName>Hi-visibility vest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>