force-app/main/default/objects/OrderItem/fields/Preferred_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date_and_Time__c</fullName>
    <description>Captures the preferred date and time for the service appointment used at time of booking.</description>
    <inlineHelpText>Indicates the preferred date and time for the service appointment used at time of booking.</inlineHelpText>
    <label>Preferred Date and Time</label>
    <type>DateTime</type>
</CustomField>