force-app/main/default/objects/OrderItem/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the primary contact for &quot;on-site&quot; Order Product, if different than Orders&apos;.</description>
    <inlineHelpText>Indicates the primary contact for &quot;on-site&quot; Order Product, if different than Orders&apos;.</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>