force-app/main/default/objects/OrderItem/fields/Primary_Contact_s_Mailing_Province__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_s_Mailing_Province__c</fullName>
    <description>Captures the Primary Contact&apos;s Mailing Province listed on the Order record. Used for tax calculation for online products.</description>
    <inlineHelpText>Indicates the Primary Contact&apos;s Mailing Province listed on the Order record. Used for tax calculation for online products.</inlineHelpText>
    <label>Primary Contact&apos;s Mailing Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>