force-app/main/default/objects/OrderItem/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Captures the Product&apos;s Product Code.</description>
    <inlineHelpText>Indicates the Product&apos;s Product Code.</inlineHelpText>
    <label>Product Code 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>