force-app/main/default/objects/OrderItem/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Captures the Product&apos;s Family.</description>
    <inlineHelpText>Indicates the Product&apos;s Family.</inlineHelpText>
    <label>Product Family</label>
    <length>80</length>
    <type>Text</type>
</CustomField>