force-app/main/default/objects/OrderItem/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Captures the Product&apos;s Product Name.</description>
    <inlineHelpText>Indicates the Product&apos;s Product Name.</inlineHelpText>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>