force-app/main/default/objects/OrderItem/fields/Promo_Discount_Amt__c.field-meta.xml
<CustomField>
    <fullName>Promo_Discount_Amt__c</fullName>
    <label>Promo Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>