force-app/main/default/objects/OrderItem/fields/Promo_Summary__c.field-meta.xml
<CustomField>
    <fullName>Promo_Summary__c</fullName>
    <label>Promo Summary</label>
    <length>128</length>
    <type>Text</type>
</CustomField>