force-app/main/default/objects/OrderItem/fields/Push_to_Amazon__c.field-meta.xml
<CustomField>
    <fullName>Push_to_Amazon__c</fullName>
    <description>TEMPORARY FIELD (DO NOT USE)</description>
    <inlineHelpText>TEMPORARY FIELD (DO NOT USE)</inlineHelpText>
    <label>Push to Amazon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Push</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>