force-app/main/default/objects/OrderItem/fields/Quote_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Created_Date__c</fullName>
    <formula>SBQQ__QuoteLine__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Created Date</label>
    <type>DateTime</type>
</CustomField>