force-app/main/default/objects/OrderItem/fields/Quote_Training_Address1__c.field-meta.xml
<CustomField>
    <fullName>Quote_Training_Address1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Training Address</label>
    <referenceTo>Account_Address__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>