force-app/main/default/objects/OrderItem/fields/REPORT_Calculated_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>REPORT_Calculated_Gross_Margin__c</fullName>
    <formula>Total_Amount_Without_Tax__c - ( ( PricebookEntry.Product2.Base_Cost__c +
(( Volume_Discount__c +  Contracted_Discount_Display__c ) *  PricebookEntry.Product2.Commission_Offset__c )
) *  SBQQ__OrderedQuantity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>REPORT Calculated Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>