force-app/main/default/objects/OrderItem/fields/REPORT_Calculated_Margin_Commission__c.field-meta.xml
<CustomField>
    <fullName>REPORT_Calculated_Margin_Commission__c</fullName>
    <formula>if(
AND(PricebookEntry.Product2.Pay_Commission__c,Not(Promotional_Discount__r.No_Commission__c)),
max(0, REPORT_Calculated_Gross_Margin__c * PricebookEntry.Product2.Commission_Rate__c),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>REPORT Calculated Margin Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>