force-app/main/default/objects/OrderItem/fields/REPORT_Commission_Margin_Flat__c.field-meta.xml
<CustomField>
    <fullName>REPORT_Commission_Margin_Flat__c</fullName>
    <formula>REPORT_Calculated_Margin_Commission__c - REPORT_Flat_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>REPORT Commission (Margin - Flat)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>