force-app/main/default/objects/OrderItem/fields/REPORT_Flat_Commission__c.field-meta.xml
<CustomField>
    <fullName>REPORT_Flat_Commission__c</fullName>
    <formula>Total_Amount_Without_Tax__c * 0.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>REPORT Flat Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>