force-app/main/default/objects/OrderItem/fields/SA_Product_Lookup__c.field-meta.xml
<CustomField>
    <fullName>SA_Product_Lookup__c</fullName>
    <formula>Classroom_Course__r.Product__r.Product_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA_Product_Lookup</label>
    <type>Text</type>
</CustomField>