force-app/main/default/objects/OrderItem/fields/SA_Sched_Start__c.field-meta.xml
<CustomField>
    <fullName>SA_Sched_Start__c</fullName>
    <formula>Classroom_Course__r.SchedStartTime</formula>
    <label>SA Sched Start</label>
    <type>DateTime</type>
</CustomField>