force-app/main/default/objects/OrderItem/fields/SA_Status__c.field-meta.xml
<CustomField>
    <fullName>SA_Status__c</fullName>
    <formula>Text( Classroom_Course__r.Status )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA_Status</label>
    <type>Text</type>
</CustomField>