force-app/main/default/objects/OrderItem/fields/SafeGuard__c.field-meta.xml
<CustomField>
    <fullName>SafeGuard__c</fullName>
    <formula>IF(  
AND(Course_Product_Line__c != &apos;AE&apos;, 
Product_Family__c != &apos; Courses&apos;,
$Profile.Name!= &apos;OSG Sys Admin&apos;
),
&quot;Can&apos;t delete this order product!&quot;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SafeGuard</label>
    <type>Text</type>
</CustomField>