force-app/main/default/objects/OrderItem/fields/Sales_User__c.field-meta.xml
<CustomField>
    <fullName>Sales_User__c</fullName>
    <formula>Order.Sales_User__c</formula>
    <label>Sales User</label>
    <type>Text</type>
</CustomField>