force-app/main/default/objects/OrderItem/fields/Sales_User_Margin_Commission__c.field-meta.xml
<CustomField>
    <fullName>Sales_User_Margin_Commission__c</fullName>
    <formula>Round(Calculated_Gross_Margin__c *  Account__r.Owner.Commission_Rate__c, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales User Margin Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>