force-app/main/default/objects/OrderItem/fields/Same_Day_Course_Match__c.field-meta.xml
<CustomField>
    <fullName>Same_Day_Course_Match__c</fullName>
    <description>Captures if the Order Product has a matching Order Product with the same Preferred Date and Time. Only applicable to &quot;On-site&quot; &quot;Course&quot; Products. Set via trigger and used with price rule to provide multi-course same day discounts.</description>
    <inlineHelpText>Indicates if the the Order Product has a matching Order Product with the same Preferred Date and Time. Only applicable to &quot;On-site&quot; &quot;Course&quot; Products. Set via trigger and used with price rule to provide multi-course same day discounts.</inlineHelpText>
    <label>Same Day Course Match</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>