force-app/main/default/objects/OrderItem/fields/Scheduled_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date_and_Time__c</fullName>
    <description>Captures the Scheduled Start date and time of the related Service Appointment (for on-site Service Appointments). Populated once Service Appointment is created via Process Builder rule.</description>
    <inlineHelpText>Indicates the Scheduled Start date and time of the related Service Appointment (for on-site Service Appointments). Populated once Service Appointment is created via Process Builder rule.</inlineHelpText>
    <label>Scheduled Date and Time</label>
    <type>DateTime</type>
</CustomField>