force-app/main/default/objects/OrderItem/fields/Scheduled_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_End_Time__c</fullName>
    <description>This will calculate the end date to be displayed in the email template</description>
    <formula>Classroom_Course__r.SchedEndTime
/*
IF(
ISBLANK(Classroom_Course__c) , 
Scheduled_Date_and_Time__c +  Duration__c * 60/1440, 
 Classroom_Course__r.SchedEndTime
)
*/</formula>
    <label>Scheduled End Time</label>
    <type>DateTime</type>
</CustomField>