force-app/main/default/objects/OrderItem/fields/Scheduled_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start_Time__c</fullName>
    <formula>Classroom_Course__r.SchedStartTime</formula>
    <label>Scheduled Start Time</label>
    <type>DateTime</type>
</CustomField>