force-app/main/default/objects/OrderItem/fields/Ship_To_Province__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Province__c</fullName>
    <description>Captures the Ship To Province listed on the Order record. Used for tax calculation for online products.</description>
    <inlineHelpText>Indicates the Ship To Province listed on the Order record. Used for tax calculation for online products.</inlineHelpText>
    <label>Ship To Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>