force-app/main/default/objects/OrderItem/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Shipping Address</label>
    <referenceTo>Account_Address__c</referenceTo>
    <relationshipLabel>Order Products (Shipping Address)</relationshipLabel>
    <relationshipName>Order_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>