force-app/main/default/objects/OrderItem/fields/Shipping_FSA__c.field-meta.xml
<CustomField>
    <fullName>Shipping_FSA__c</fullName>
    <description>Formula to display the FSA portion of the Ship To Postal Code. Used to match against the Shipping Rate FSA to calculate shipping cost.</description>
    <inlineHelpText>Formula to display the FSA portion of the Ship To Postal Code. Used to match against the Shipping Rate FSA to calculate shipping cost.</inlineHelpText>
    <label>Shipping FSA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>