force-app/main/default/objects/OrderItem/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <label>Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shipping_Method</valueSetName>
    </valueSet>
</CustomField>