force-app/main/default/objects/OrderItem/fields/ShipStation_Sku__c.field-meta.xml
<CustomField>
    <fullName>ShipStation_Sku__c</fullName>
    <label>ShipStation Sku</label>
    <length>40</length>
    <type>Text</type>
</CustomField>