force-app/main/default/objects/OrderItem/fields/ShipToContactId__c.field-meta.xml
<CustomField>
    <fullName>ShipToContactId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ship To Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contact needs to belong to same account as order product</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Order Products (Ship To Contact)</relationshipLabel>
    <relationshipName>Order_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>