force-app/main/default/objects/OrderItem/fields/Special_Price_Description__c.field-meta.xml
<CustomField>
    <fullName>Special_Price_Description__c</fullName>
    <description>Name of the Discount Tier or Contacted Price applied to achieve the special price for this line item.</description>
    <inlineHelpText>Name of the Discount Tier or Contacted Price applied to achieve the special price for this line item.</inlineHelpText>
    <label>Special Price Description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>