force-app/main/default/objects/OrderItem/fields/Tax_Province__c.field-meta.xml
<CustomField>
    <fullName>Tax_Province__c</fullName>
    <label>Tax Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>