force-app/main/default/objects/OrderItem/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <description>Captures the Tax Rate applicable to this Order Product based on the Province.</description>
    <inlineHelpText>Indicates the Tax Rate applicable to this Order Product based on the Province.</inlineHelpText>
    <label>Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>