force-app/main/default/objects/OrderItem/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <formula>if (

or (
DateValue(CreatedDate) &gt;= Date(2021,12,01),
and(DateValue(CreatedDate) &gt;= Date(2020,05,01) , contains(Course_Product_Line__c,&quot;COVID&quot;)),
and(DateValue(CreatedDate) &gt;= Date(2020,05,01) , contains(Course_Product_Line__c,&quot;RFTE&quot;))
)
,


if(
AND(PricebookEntry.Product2.Pay_Commission__c,Not(Promotional_Discount__r.No_Commission__c)),
max(0, Calculated_Gross_Margin__c * PricebookEntry.Product2.Commission_Rate__c),
0),


if(
OR(
AND(
PricebookEntry.Product2.Pay_Commission__c,
Not(Promotional_Discount__r.No_Commission__c),
Not(From_LMS__c)
),
AND(
From_LMS__c,
OR(
Product2Id != &apos;01t46000003jClO&apos;,
AND(
Product2Id = &apos;01t46000003jClO&apos;,
Sales_User__c = Account__r.LearningLogin_Contract_Owner__r.Alias,
DATEVALUE(CreatedDate) &lt; Account__r.LearningLogin_Contract_End_Date__c 
)
)
)
),
if(
Commission_Percentage_Override__c &gt; 0,
Total_Amount_Without_Tax__c * Commission_Percentage_Override__c,
Total_Amount_Without_Tax__c * PricebookEntry.Product2.Commission_Rate__c
),
0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>