force-app/main/default/objects/OrderItem/fields/Total_Amount_Without_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Without_Tax__c</fullName>
    <label>Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>