force-app/main/default/objects/OrderItem/fields/Total_Amount_Without_Tax_Old__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Without_Tax_Old__c</fullName>
    <formula>(Quantity*UnitPrice) - Promo_Discount_Amt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Total Old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>