force-app/main/default/objects/OrderItem/fields/Total_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Price__c</fullName>
    <label>Total Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>