force-app/main/default/objects/OrderItem/fields/Toyota_Training_Room__c.field-meta.xml
<CustomField>
    <fullName>Toyota_Training_Room__c</fullName>
    <label>Toyota Training Room</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Toyota_Training_Room</valueSetName>
    </valueSet>
</CustomField>