force-app/main/default/objects/OrderItem/fields/Train_the_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Train_the_Trainer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures whether the course Product is delivered as Train-the-Trainer.</description>
    <inlineHelpText>Indicates whether the course Product is delivered as Train-the-Trainer.</inlineHelpText>
    <label>Train-the-Trainer</label>
    <type>Checkbox</type>
</CustomField>