force-app/main/default/objects/OrderItem/fields/Training_City__c.field-meta.xml
<CustomField>
    <fullName>Training_City__c</fullName>
    <description>City of the Training address for this Order Product. Pulled from Order for On-Site/Consulting or Service Appointment for Classroom/Evaluations.</description>
    <inlineHelpText>City of the Training address for this Order Product.</inlineHelpText>
    <label>Training City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>