force-app/main/default/objects/OrderItem/fields/Training_Country__c.field-meta.xml
<CustomField>
    <fullName>Training_Country__c</fullName>
    <description>Country of the Training address for this Order Product. Pulled from Order for On-Site/Consulting or Service Appointment for Classroom/Evaluations.</description>
    <inlineHelpText>Country of the Training address for this Order Product.</inlineHelpText>
    <label>Training Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>