force-app/main/default/objects/OrderItem/fields/Training_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Training_Location_Name__c</fullName>
    <description>Name of the Training address for this Order Product. Pulled from Quote for On-Site/Consulting or Service Appointment for Classroom/Evaluations.</description>
    <inlineHelpText>Name of the Training address for this Order Product.</inlineHelpText>
    <label>Training Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>