force-app/main/default/objects/OrderItem/fields/Training_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Training_Postal_Code__c</fullName>
    <description>Postal Code on the Training address for this Order Product. Pulled from Order for On-Site/Consulting or Service Appointment for Classroom/Evaluations.</description>
    <inlineHelpText>Postal Code on the Training address for this Order Product.</inlineHelpText>
    <label>Training Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>