force-app/main/default/objects/OrderItem/fields/Training_Province__c.field-meta.xml
<CustomField>
    <fullName>Training_Province__c</fullName>
    <description>Province of the Training address for this Order Product. Pulled from Order for On-Site/Consulting or Service Appointment for Classroom/Evaluations.</description>
    <inlineHelpText>Province of the Training address for this Order Product.</inlineHelpText>
    <label>Training Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>