force-app/main/default/objects/OrderItem/fields/Training_Street__c.field-meta.xml
<CustomField>
    <fullName>Training_Street__c</fullName>
    <description>Street of the Training address for this Order Product. Pulled from Order for On-Site/Consulting or Service Appointment for Classroom/Evaluations.</description>
    <inlineHelpText>Street of the Training address for this Order Product.</inlineHelpText>
    <label>Training Street</label>
    <type>TextArea</type>
</CustomField>