force-app/main/default/objects/OrderItem/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Capture the work type utilized in the &quot;Book Appointment&quot; process. Dictates the duration and skills required.</description>
    <inlineHelpText>Indicates the work type utilized in the &quot;Book Appointment&quot; process. Dictates the duration and skills required.</inlineHelpText>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>